# nes

./: .gitignore  Cargo.toml
asm/: build.sh  test.s
src/: bus.rs  cartridge.rs  debug_ui.rs  main.rs  nes.rs  new_bus.rs
src/bus/: mod.rs  ppu_state.rs
src/cpu/: address_mode.rs  address_modes.rs  helpers.rs  instruction.rs  instructions.rs  mod.rs  operation.rs  util.rs
src/ppu/: mod.rs  registers.rs
