[package]
name = "nes"
version = "0.1.0"
authors = ["jhodgson91 <jhodgson71@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.6"
num = "0.2.1"
ggez = "0.5.1"
bitfield = "0.13.2"
bitflags = "1.2.1"
image = "0.22.4"
rand = "0.7.3"

[[bin]]
name = "new_bus"
path = "src/new_bus.rs"